[workspace]
members = [
    "integration-tests",
    "node",
    "pallets/commitments",
    "pallets/subtensor",
    "runtime",
]
resolver = "2"

[workspace.lints.clippy]
indexing-slicing = "deny"
arithmetic-side-effects = "deny"
type_complexity = "allow"
unwrap-used = "deny"

[profile.release]
panic = "unwind"

[profile.test]
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1
